# Lab3

./: .clang-tidy  CMakeLists.txt  CompleteBinaryTree.h  DoublyList.h  DynamicArray.h  HashTable.h  Queue.h  SinglyList.h  Stack.h
GO/: coverage.html  coverage.out  go.mod
GO/structures/: array.go  hashtables.go  list.go  queue.go  stack.go  structures_test.go  tree.go
tests/: bench_main.cpp  tests_boost.cpp  tests_catch.cpp  tests_google.cpp  tests_gtest.cpp
